--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Игнорируем саму базу данных (чтобы твои переписки не улетели на Гит)
+# Игнорируем саму базу данных
 messages.db
 
 # Игнорируем системные файлы Windows
 Thumbs.db
 desktop.ini
+
+#Игнонируем всё в папке ssh
+ssh/
+
+#Скрытие токена репозитория
+start/TOKEN
